--- a/peterfence-fe/package.json
+++ b/peterfence-fe/package.json
@@ -27,9 +27,12 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.4",
     "react-scroll-parallax": "^3.3.2",
+    "react-toastify": "^9.1.1",
     "webp-loader": "^0.6.0",
     "webpack": ">=4.3.0 <5.0.0",
     "webpack-cli": "*"
@@ -38,6 +41,7 @@
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-helmet": "^6.1.6",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
