--- a/peterfence-fe/netlify.toml
+++ b/peterfence-fe/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-    command = "npm run build"
-    publish = "out"
+    command = "yarn build"
+    publish = "peterfence-fe/out"
 
 [[plugins]]
 package = "@netlify/plugin-nextjs"
