--- a/peterfence-fe/netlify.toml
+++ b/peterfence-fe/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-    command = "npm run build && npm run export"
+    command = "npm run build && npm run start"
     publish = "out"
 
 [[plugins]]
