--- a/peterfence-fe/package.json
+++ b/peterfence-fe/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "*"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.30.4",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
