--- a/peterfence-fe/package.json
+++ b/peterfence-fe/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -22,6 +23,7 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
     "next": "12.1.6",
+    "next-on-netlify": "^3.0.1",
     "next-optimized-images": "^2.6.2",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
