--- a/peterfence-fe/netlify.toml
+++ b/peterfence-fe/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     command = "npm run build"
-    publish = "out"
+    publish = "peterfence-fe/out"
 [build.environment]
     NPM_FLAGS="--version"
 [[plugins]]
