--- a/peterfence-fe/netlify.toml
+++ b/peterfence-fe/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     command = "pnpm run build"
-    publish = "out"
+    publish = ".next"
     framework = "#static"
 [build.environment]
     NPM_FLAGS="--version"
