--- a/peterfence-fe/package.json
+++ b/peterfence-fe/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.3",
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
     "next": "12.1.6",
